2005-09-08 Dario Massarin <nekkar@libero.it>
        * Start to implement properly the detailsWidgets for each transfer.
        Now we have a basic widget available with all the plugins and the 
        next step is to add at the bottom of it another widget provided
        by each plugin's factory with the createTransferDetails() function.
        * Start to implement a BTTransferHandler class, reimplementation 
        of the generic TransferHandler class.

2005-09-02 Urs Wolfer <u.wolfer @ bluewin.ch>
        * *Replace the old droptarget icon with the nuvola one

2005-08-31 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Icons in smaller sizes (forwardport)
        * Work on configuration dialogs. Not finished yet.

2005-08-23 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Better KGet mime icon (forwardport)
        * Remove artifacts from images (forwardport)
        * Add action to show / hide drop target
        * Add some actions to maintoolbar (new download, show / hide drop target)
        * Fix a problem with the configuration dialog (wasn't shown the first call)
        * Remove some compiler warnings

2005-08-12 Dario Massarin <nekkar@libero.it>
        * Make the configuration dialogs compile again, but we have to 
        completely redesign them, since they usually refer to settings
        that are not available anymore.
        * Fix a problem in the scheduler introduced with the last commit.

2005-08-11 Dario Massarin <nekkar@libero.it>
        * More work on the ViewsContainer class. Now we have 3 buttons:
        "Downloads", "Finished" and "Transfer Details" one. The last one
        is associated with a QMenu that lets you select which transfer to 
        visualize.
        * Fixed problem when stopping delayed transfers.

2005-08-06 Dario Massarin <nekkar@libero.it>
        * Change the way we handle the Transfer actions
        * Reoganize the gui, introducing a new ViewsContainer class.

2005-08-02 Dario Massarin <nekkar@libero.it>